--- a/arizona.html
+++ b/arizona.html
@@ -1,5 +1,5 @@
 <html>
-    <h1>You drank the iced tea</h1>
+    <h1>Wrong choice!</h1>
     <p><img src="https://media.tenor.com/lIVHd-2qkvMAAAAi/skull-skull-emoji.jpg"></p>
     <h2>You died!</h2>
 </html>
