--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <script>
         function cheat() {
             var code = document.getElementById("cheatcode").value
-            if(code==="191516891") {
+            if(code==="6409") {
                 alert("correct cheat code!")
                 window.location.href="/ending.html"
             }
