--- a/dinosaur2.html
+++ b/dinosaur2.html
@@ -8,15 +8,7 @@
     <script>
         function CheckAnswer2() {
             var answer2 = document.getElementById("answer2").value
-            if(answer2==="Joe Mama") {
-                alert("correct answer!")
-                window.location.href="/dinosaur3.html"
-            }
-            if(answer2==="joe mama") {
-                alert("correct answer!")
-                window.location.href="/dinosaur3.html"
-            }
-            if(answer2==="JOE MAMA") {
+            if(answer2==="Joe Mama" || answer2==="joe mama" || answer2==="JOE MAMA") {
                 alert("correct answer!")
                 window.location.href="/dinosaur3.html"
             } else {
