--- a/dinosaur3.html
+++ b/dinosaur3.html
@@ -9,11 +9,7 @@
     <script>
         function CheckAnswer3() {
             var answer3 = document.getElementById("answer3").value
-            if(answer3==="Mr Kao") {
-                alert("correct answer!")
-                window.location.href="/dinosaur4.html"
-            }
-            if(answer3==="Mr. Kao") {
+            if(answer3==="Mr Kao" || answer3==="Mr. Kao") {
                 alert("correct answer!")
                 window.location.href="/dinosaur4.html"
             } else {
