--- a/dinosaur4.html
+++ b/dinosaur4.html
@@ -2,20 +2,19 @@
     <h1>You walked 10 miles and found a dinosaur!</h1>
     <p><img src="https://i.pinimg.com/564x/cc/f3/e0/ccf3e0339d1131bcfe8e3d1e71d556dc.jpg"></p>
     <h2>The dinosaur asks you fourth question:</h2>
-    <p>?</p>
+    <p>What is 9+10?</p>
     <p><input type="text" id="answer4" value="type answer here"></p>
     <p><button onclick="CheckAnswer4()">Check Answer</button></p>
 
     <script>
         function CheckAnswer4() {
             var answer4 = document.getElementById("answer4").value
-            if(answer4==="red") {
+            if(answer4==="21") {
                 alert("correct answer!")
                 window.location.href="/dinosaur5.html"
-            }
-            if(answer4==="Red") {
-                alert("correct answer!")
-                window.location.href="/dinosaur5.html"
+            } else {
+                alert("Wrong!")
+                window.location.href="/dinosaureat.html"
             }
         }
     </script>
