--- a/dinosaur5.html
+++ b/dinosaur5.html
@@ -11,7 +11,7 @@
             var answer5 = document.getElementById("answer5").value
             if(answer5==="Playstation" || answer5==="playstation") {
                 alert("correct answer!")
-                window.location.href="/dinosaur2.html"
+                window.location.href="/ending.html"
             }  else {
                 alert("Wrong!")
                 window.location.href="/dinosaureat.html"
